public/stylesheets/all.css
@font-face {
    font-family: JLEE;
    src: url('/fonts/JLEE.ttf');
}

/*RESET*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
body { line-height: 1; }
ol, ul { list-style: none; }
blockquote, q { quotes: none; }
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}


html,body { height:100%;width:100%;}
body {
    margin: 0;
    color: #010000;
    font: 14px Arial, Helvetica, sans-serif;
    overflow: hidden;
    /*background: #fff url(../images/bg-body.png) repeat-y 50% 0;*/
}
img{border-style:none;}
a{text-decoration:none; color: inherit;}
a:hover{text-decoration:underline;}
input, textarea, select {
    font: 100% Arial, Helvetica, sans-serif;
    vertical-align: middle;
    color: #000;
    resize: none;
}
/*
END OF RESET
*/

/*FONT STYLINGS*/
.important-color{
    color: #FFC233;
}

/*PAGE LAYOUT*/
#content{
    margin: 0 auto;
    height: 100%;
    width: 100%;
    z-index: 1;
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    /*display: table-cell;*/
}
#left_side_pane{
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100%;
    width: 400px;
    overflow: hidden;
    z-index: 15;
}
#right_side_pane{
    position: absolute;
    top: 20px;
    right: 20px;
    width: auto;
    overflow: hidden;
    z-index: 10;
}
#top_pane{
    position: absolute;
    top: 20px;
    right: 20px;
    height: auto;
    overflow: hidden;
    z-index: 10;
}
#bottom_pane{
    position: absolute;
    bottom: 20px;
    right: 20px;
    height: auto;
    overflow: hidden;
    z-index: 10;
}
#center_pane{
    position: absolute;
    overflow: hidden;
    z-index: 10;
}

#footer{
    position: absolute;
    bottom: 0px;
    left: 450px;
    z-index: 200;
    color: black;
    font-weight: bold;
}
#footer li{
    float: left;
    padding-left: 5px;
}
/*Header*/
#header {
    background: url("../images/header-bg.png") repeat-x #333;
    position: relative;
    width: 100%;
    z-index: 3;
    height: 65px;
}
#header:after {
    clear: both;
    content: "";
    display: block;
}
#header .open { padding: 0; }
#header .holder {
    margin: 0 auto;
    padding: 18px 0 0 0;
}
#header .holder:after {
    clear: both;
    content: "";
    display: block;
}
#current_user_name{
    color: white;
    font: bold 12px/19px Arial, Helvetica, sans-serif;
}
#signin_button{
    float: right;
    color: white;
    font: bold 12px/19px Arial, Helvetica, sans-serif;
    margin: 9px 50px 0 5px;
}
#how_it_works_btn{
    float: right;
    color: white;
    font: bold 12px/19px Arial, Helvetica, sans-serif;
    margin: 9px 15px 0 5px;
    cursor: pointer;
}
#signed_in_button{
    float:right;
    position: relative;
    margin: 0px 50px 0 5px;
    cursor: pointer;
}
#signed_in_button ul{
    display:none;
    color: #000;
    z-index:2;
    right: 0px;
    width: 60px;
    position:absolute;
    background: #d2e9f3;
    padding: 10px 20px 10px 20px;
}
#signed_in_button:hover ul{
    display:block;
}

/*Hidden*/
.hidden {
    display:none;
}
.invisible{
    visibility: hidden;
}

/*Main*/
#main {
    position: relative;
    width: 100%;
    z-index: 1;
}

/*Logo in the header*/
.logo {
    background: url("../images/ss_site_logo.png") no-repeat;
    float: left;
    height: 43px;
    margin: -9px 30px 0 50px;
    overflow: hidden;
    text-indent: -9999px;
    width: 90px;
}
.logo a {
    display: block;
    height: 100%;
}

/*Results list*/
.result{
    padding:15px 10px 10px 15px;
    height: 80px;
    position: relative;
}
.result-image{
    float: left;
    margin: 0px 14px 0px 0px;
}
.attending-info {
    background: #0981BE;
    color: #fff;
    float: left;
    font: bold 12px/19px Arial, Helvetica, sans-serif;
    height: 18px;
    width: 22px;
    padding: 2px 0;
    overflow: hidden;
    text-align: center;
    margin-right: 3px;
}
.result-text{
    /*float: left;*/
    color: white;
}
.result-title{
    font: bold 18px/18px Arial, Helvetica, sans-serif;
    color: #FFC233;
    padding-bottom: 5px;
    width: 260px;
    cursor: pointer;
}
.result-date{
    padding-bottom: 5px;
}
.result-tags{
    color: white;
    float: left;
    padding-bottom: 5px;
}
.result-attendees{
    padding-bottom: 5px;
}
.result-description{
    color: white;
    margin: 10px 10px 5px 10px;
    overflow-y: auto;
    max-height: 75px;
    width: 380px;
}
.result-arrow{
    width: 0;
    height: 0;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
    border-left: 15px solid #BE1E2D;
    float:left;
    position:relative;
    top: 25px;
    left: -10px;
}
.result-join-btn-holder{
    position: absolute;    
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    cursor: pointer;
    text-align: center;
    bottom: 9px;
    right: 5px;
}

.result-join-btn-holder .attending {
    width: 50px;
    height: 50px;
    background-image: url('../images/checkmark_small.png');
}

.result-join-btn-holder .not-attending {
    width: 50px;
    height: 50px;
    background-image: url('../images/checkmark_small_grey.png');
}
/* ... */

